# agentic-workflow-engine

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/orchestration/: orchestrator.py  workflow_engine.py
src/policies/: policy_engine.py
src/tools/: tool_registry.py
