[project]
name = "agentic-workflow-engine"
version = "1.0.0"
description = "Production agent orchestration engine with policy enforcement and checkpointing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Christopher Mangun", email = "cmangun@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["agents", "workflow", "orchestration", "llm", "ai", "governance"]

dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
